--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
             "Aura\\Di\\": "vendor/aura/di/tests/"
         }
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    "require-dev": {
+        "phpunit/phpunit": "^5.0"
+    }
 }
